el faza ta3 el intelliJ